[gd_scene load_steps=5 format=3 uid="uid://bt37unkevrx8s"]

[ext_resource type="Theme" uid="uid://b1g4mlja2is1k" path="res://fontes/fontbase.tres" id="1_r8aoj"]
[ext_resource type="Script" path="res://Buttons.gd" id="1_repoq"]
[ext_resource type="AudioStream" uid="uid://bgg3m4f8tu3bp" path="res://audio/bassdrum_default.mp3" id="3_eqb40"]
[ext_resource type="AudioStream" uid="uid://cywt8wmr4nhou" path="res://audio/snare_default.mp3" id="4_dm4c3"]

[node name="Game" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 1023.0
offset_bottom = 576.0
color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="Buttons" type="Node2D" parent="."]
script = ExtResource("1_repoq")

[node name="Bumbo" type="Button" parent="Buttons"]
offset_right = 1024.0
offset_bottom = 288.0
theme = ExtResource("1_r8aoj")
text = "BUMBO"

[node name="Caixa" type="Button" parent="Buttons"]
offset_top = 289.0
offset_right = 1024.0
offset_bottom = 577.0
theme = ExtResource("1_r8aoj")
text = "CAIXA"

[node name="bumboSound" type="AudioStreamPlayer2D" parent="Buttons"]
stream = ExtResource("3_eqb40")
volume_db = 5.0

[node name="caixaSound" type="AudioStreamPlayer2D" parent="Buttons"]
stream = ExtResource("4_dm4c3")
volume_db = 5.0

[connection signal="pressed" from="Buttons/Bumbo" to="Buttons" method="_on_bumbo_pressed"]
[connection signal="pressed" from="Buttons/Caixa" to="Buttons" method="_on_caixa_pressed"]
